# organisation-snapshotting-poc

./: .gitignore  PIRR.md  README.md  pyproject.toml
design/: sample_report.md
lambda/src/: main.py
src/: main.py
