[project]
name = "src"
version = "0.1.0"
description = "A Poc tool to produce a PDF report from GitHub Policy Data"
authors = [
    {name = "Kieran Pritchard",email = "kieran.pritchard@ons.gov.uk"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3 (>=1.38.33,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "jwt (>=1.3.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
